log/gin_5fold_4.txt
nohup: ignoring input
  File "gin.py", line 205
    print('features to use:' features_to_use)
                             ^
SyntaxError: invalid syntax
